--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter city name" spellcheck="false">
-            <button><img src="\images\search.png" height="30px" width="30px"></button>
+            <button><img src="images\search.png" height="30px" width="30px"></button>
         </div>
         <div class="error">
             <p>Invalid City Name</p>
